--- a/001_basic_alert/hello_world.html
+++ b/001_basic_alert/hello_world.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 </head>
 <body>
-	<p>Document starts...</p>
+	<p>Document begins...</p>
 	<script type="text/javascript">
 		alert('Hello World!');
 	</script>
