Added some new examples

--- a/0003-data-types/data-types.html
+++ b/0003-data-types/data-types.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Activate debugging with F12</title>
-	<meta charset="utf-8">
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 </head>
 <body>
 	<p>Select "Console" in the debugger menu. Then click Run again</p>
