--- a/0006-function-parameters/function-param.html
+++ b/0006-function-parameters/function-param.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Call function with parameters</title>
-	<meta charset="utf-8">
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 </head>
 <body>
 	<script type="text/javascript" src="./js/function.js"></script>
