--- a/0008-function-declaration-expession/func-declaration.html
+++ b/0008-function-declaration-expession/func-declaration.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Function Declaration Example</title>
-	<meta charset="utf-8">
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 </head>
 <body>
 	<script type="text/javascript">
