--- a/0001-basic-alert/hello-world.html
+++ b/0001-basic-alert/hello-world.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Hello World!</title>
-	<meta charset="utf-8">
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 </head>
 <body>
 	<p>Document begins...</p>
