--- a/0002-async-alert/async-alert.html
+++ b/0002-async-alert/async-alert.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 	<title>Async javascript loading</title>
-	<meta charset="utf-8">
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 </head>
 <body>
 	<p>Document begins...</p>
