--- a/0004-prompt-confirm/prompt-confirm-test.html
+++ b/0004-prompt-confirm/prompt-confirm-test.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Prompt test</title>
-	<meta charset="utf-8">
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 </head>
 <body>
 	<script type="text/javascript" src="./js/prompt.js"></script>	
