--- a/0005-function-simple/function-simple.html
+++ b/0005-function-simple/function-simple.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>A simple function</title>
-	<meta charset="utf-8">
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 </head>
 <body>
 	<p>javascript source loading...</p>
