--- a/0007-function-return/function-return.html
+++ b/0007-function-return/function-return.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Access Page</title>
-	<meta charset="utf-8">
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 </head>
 <body>
 	<script type="text/javascript" src="./js/access.js"></script>
