Some cleanup changes

--- a/0002-async-alert/async-alert.html
+++ b/0002-async-alert/async-alert.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<p>Document begins...</p>
-	<script async type="text/javascript" src="./js/alert.js"></script>
+	<script async type="text/javascript" src="js/alert.js"></script>
 	<p>...Documents ends</p>
 </body>
 </html>
