--- a/0005-function-simple/function-simple.html
+++ b/0005-function-simple/function-simple.html
@@ -6,8 +6,9 @@
 </head>
 <body>
 	<p>javascript source loading...</p>
-	<script type="text/javascript" src="./js/function-test.js"></script>
+	<script type="text/javascript" src="js/function-test.js"></script>
 	<p>javascript  source loading completed</p>
+
 	<script type="text/javascript">
 		showAlert();
 	</script>
