--- a/0006-function-parameters/function-param.html
+++ b/0006-function-parameters/function-param.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 </head>
 <body>
-	<script type="text/javascript" src="./js/function.js"></script>
+	<script type="text/javascript" src="js/function.js"></script>
 	<script type="text/javascript">
 		var message = 'How are things going over there?';
 		var to  = 'Matt';
@@ -15,9 +15,6 @@
 
 		//no message
 		showAlert(to);
-
-		//show alert directly to check if arguments were changed
-		alert('To: ' + to + '\nMessage: ' + message);
 	</script>
 
 </body>
