--- a/0008-function-declaration-expession/func-declaration.html
+++ b/0008-function-declaration-expession/func-declaration.html
@@ -7,8 +7,8 @@
 <body>
 	<script type="text/javascript">
 		/* 
-		  	The function was created by the interpreter before code run.
-			It let us call such functions before their declaration */
+		  	The function was created by the interpreter before code flow runs.
+			It lets us call such functions before their declaration */
 		showAlert('Function Declaration');
 
 		// 	Function Declaration
