--- a/0011-testing-mocha-chai/testing.html
+++ b/0011-testing-mocha-chai/testing.html
@@ -12,17 +12,16 @@
   	<script>
     	mocha.setup('bdd');
   	</script>
-
   	<!-- add Chai library -->
  	<script src="https://cdnjs.cloudflare.com/ajax/libs/chai/2.0.0/chai.js"></script>
 </head>
 <body>
 	
 	<!-- add script with target function -->
-  	<script src="./js/target-func.js"></script>
+  	<script src="js/target-func.js"></script>
 
 	<!-- add script with specs -->
-  	<script src="./js/tests.js"></script>
+  	<script src="js/tests.js"></script>
 
   	<!-- The test results will be provided inside the div block with id="mocha" -->
   	<div id="mocha"></div>
