--- a/0012-object-as-arrays/object-as-arrays.html
+++ b/0012-object-as-arrays/object-as-arrays.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 </head>
 <body>
-	<script type="text/javascript" src="./js/array_func.js"></script>
+	<script type="text/javascript" src="js/array_func.js"></script>
 	<script type="text/javascript">
 		showAlert("Mike", 25);
 		showAlert("Olga");
