--- a/0003-data-types/data-types.html
+++ b/0003-data-types/data-types.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 	<p>Select "Console" in the debugger menu. Then click Run again</p>
-	<script type="text/javascript" src="./js/types-output.js"></script>
+	<script type="text/javascript" src="js/types-output.js"></script>
 </body>
 </html>
