--- a/0004-prompt-confirm/prompt-confirm-test.html
+++ b/0004-prompt-confirm/prompt-confirm-test.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 </head>
 <body>
-	<script type="text/javascript" src="./js/prompt.js"></script>	
-	<script type="text/javascript" src="./js/confirm.js"></script>
+	<script type="text/javascript" src="js/prompt.js"></script>	
+	<script type="text/javascript" src="js/confirm.js"></script>
 </body>
 </html>
