--- a/0009-function-anonymous/func-anonymous.html
+++ b/0009-function-anonymous/func-anonymous.html
@@ -5,11 +5,15 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 </head>
 <body>
-	<script type="text/javascript" src="./js/anonymous.js"></script>
+	<script type="text/javascript" src="js/anonymous.js"></script>
 	<script type="text/javascript">
 		ask('Please press Yes or No',
-			function(){alert("You said Yes");},
-  			function(){alert("You said No");}
+			function(){
+				alert("You said Yes");
+			},
+  			function(){
+  				alert("You said No");
+  			}
   		);
 	</script>
 </body>
