--- a/0010-named-function-expression/named-func-exp.html
+++ b/0010-named-function-expression/named-func-exp.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 </head>
 <body>
-	<script type="text/javascript" src="./js/nfe.js"></script>
+	<script type="text/javascript" src="js/nfe.js"></script>
 	<script type="text/javascript">
 		var number = prompt('Please enter a natural number', 1);
 		alert(number > 0 ? factorial(number) : NaN);
