--- a/0013-object-all-properties/all_properties.html
+++ b/0013-object-all-properties/all_properties.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 </head>
 <body>
-	<script type="text/javascript" src="./js/property-func.js"></script>
+	<script type="text/javascript" src="js/property-func.js"></script>
 	<script type="text/javascript">
 		var person = {
 			name: 'Valery',
